--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <nav>
         <ul>
             <li><a href="index.html" title="Home Page">Home</a></li>
-            <li><a href="page2.html" title="Second Page">Page Two</a></li>
-            <li><a href="page3.html" title="Third Page">Page three</a></li>
+            <li><a href="PageTwo.html" title="Second Page">Page Two</a></li>
+            <li><a href="PageThree.html" title="Third Page">Page three</a></li>
         </ul>
     </nav>
 
