--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li><a href="index.html" title="Home Page">Home</a></li>
             <li><a href="PageTwo.html" title="Second Page">Page Two</a></li>
             <li><a href="PageThree.html" title="Third Page">Page three</a></li>
+            <li><a href="TwoCoulum.html" title="TwoCoulum">TwoCoulums</a></li>
         </ul>
     </nav>
 
