added fluied page

--- a/TwoCoulum2 - Copy.html
+++ b/TwoCoulum2 - Copy.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="web,page,Iron Man">
     <title>Payton Kimpels's site</title>
     <!--used to link stylesheet-->
-    <link rel="stylesheet" href="mystyles.css">
+    <link rel="stylesheet" href="mystyles2- Copy.css">
 </head>
 
 <body>
@@ -31,7 +31,6 @@
 
         <aside>
             <p>
-                
                 <img src="images/tony.jpg" alt="Picture of Iron Man" width="360">
                 Iron man is my favorit super hero because 1 he actuly dosent have any super powers it is just his souit that he
                 made that gives him powers. 2 i also like that he has a quote on quote disability because of the arc reactor in
